--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
             <div class="slideshow-container">
                 <div class="mySlides fade">
                   <div class="numbertext">1 / 3</div>
-                  <img src="./Assets/Sampleportfolio (1).png" style="width:100%">
+                  <img src="./Assets/customer-service (1) 1.png" style="width:100%">
                   <div class="text">Sample Project One</div>
                 </div>
                 
                 <div class="mySlides fade">
                   <div class="numbertext">2 / 3</div>
-                  <img src="./Assets/Sampleportfolio (2).png" style="width:100%">
+                  <img src="./Assets/idea 1.png" style="width:100%">
                   <div class="text">Sample Project Two</div>
                 </div>
                 
