--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                 </div>
             </div>
 
-            <div class="portfolio-btn">
+            <!--<div class="portfolio-btn">
                 <a href="#" class="button mainbtn3 btn-hover1">View Portfolio</a>
-            </div>
+            </div>-->
 
         </section>
         
